[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Thiago Pacheco <thiagodelimapacheco@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
article = "^0.1.1"
SQLAlchemy = "^1.4.31"
users = "^1.0.dev0"
abstract = "^2021.11.29"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
